--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - neuromorphic_network
     restart: unless-stopped
 
-  # THALAMUS: SurrealDB - Attention/Filtering, Multi-Modal (FIXED)
+  # THALAMUS: SurrealDB - Attention/Filtering, Multi-Modal (SIMPLIFIED)
   thalamus:
     image: surrealdb/surrealdb:latest
     container_name: neuromorphic-thalamus
@@ -61,7 +61,7 @@ services:
       - "8001:8000"
     volumes:
       - thalamus_data:/data
-    command: ["start", "--bind", "0.0.0.0:8000", "--user", "neuromorphic", "--pass", "neuromorphic2025", "file:///data/thalamus.db"]
+    command: start file:///data/neuromorphic.db --bind 0.0.0.0:8000 --user neuromorphic --pass neuromorphic2025
     networks:
       - neuromorphic_network
     restart: unless-stopped
@@ -82,7 +82,7 @@ services:
       - neuromorphic_network
     restart: unless-stopped
 
-  # Zookeeper for Kafka coordination (MUST start first)
+  # Zookeeper for Kafka coordination
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     container_name: neuromorphic-zookeeper
@@ -91,17 +91,11 @@ services:
     environment:
       - ZOOKEEPER_CLIENT_PORT=2181
       - ZOOKEEPER_TICK_TIME=2000
-      - ZOOKEEPER_SERVER_ID=1
     networks:
       - neuromorphic_network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "nc", "-z", "localhost", "2181"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
 
-  # CEREBELLUM: Apache Kafka - Motor Memory, Execution Patterns (FIXED)
+  # CEREBELLUM: Apache Kafka - Motor Memory, Execution Patterns (ULTRA SIMPLIFIED)
   cerebellum:
     image: confluentinc/cp-kafka:latest
     container_name: neuromorphic-cerebellum
@@ -109,25 +103,16 @@ services:
       - "9093:9092"
     environment:
       - KAFKA_BROKER_ID=1
-      - KAFKA_ZOOKEEPER_CONNECT=neuromorphic-zookeeper:2181
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://neuromorphic-cerebellum:9092
-      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
-      - KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9093
+      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
       - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-      - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
-      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
-      - KAFKA_LOG_RETENTION_HOURS=168
+      - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
     depends_on:
-      zookeeper:
-        condition: service_healthy
+      - zookeeper
     networks:
       - neuromorphic_network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
 volumes:
   hippocampus_data:
