--- a/docker-compose-neuromorphic-fixed.yml
+++ b/docker-compose-neuromorphic-fixed.yml
@@ -1,6 +1,7 @@
 # Neuromorphic Brain Architecture - Fixed Version
 # Removed obsolete 'version' attribute
 # Updated Neo4j image to working version
+# Fixed port conflicts with existing hybrid memory stack
 
 services:
   # Graph Database - Knowledge Storage (Neo4j)
@@ -13,8 +14,8 @@ services:
       - NEO4J_dbms_memory_heap_initial__size=512M
       - NEO4J_dbms_memory_heap_max__size=1G
     ports:
-      - "7474:7474"   # HTTP
-      - "7687:7687"   # Bolt
+      - "7475:7474"   # HTTP (avoiding 7474 conflict)
+      - "7688:7687"   # Bolt (avoiding 7687 conflict)
     volumes:
       - cerebellum_data:/data
       - cerebellum_logs:/logs
@@ -27,10 +28,10 @@ services:
     container_name: brainstem
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9093
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     ports:
-      - "9092:9092"
+      - "9093:9092"   # Avoiding 9092 conflict
     depends_on:
       - zookeeper
     networks:
@@ -44,7 +45,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - "2181:2181"
+      - "2182:2181"   # Avoiding 2181 conflict
     networks:
       - neuromorphic_net
 
@@ -54,7 +55,7 @@ services:
     container_name: hippocampus
     command: redis-server --appendonly yes
     ports:
-      - "6379:6379"
+      - "6380:6379"   # Fixed: was 6379 (conflict with hybrid memory)
     volumes:
       - hippocampus_data:/data
     networks:
@@ -65,8 +66,8 @@ services:
     image: nginx:alpine
     container_name: thalamus
     ports:
-      - "80:80"
-      - "443:443"
+      - "8080:80"     # Avoiding port 80 conflict
+      - "8443:443"    # Avoiding port 443 conflict
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
@@ -89,7 +90,7 @@ services:
         import uvicorn; uvicorn.run(app, host=\"0.0.0.0\", port=8000)'
       "
     ports:
-      - "8000:8000"
+      - "8001:8000"   # Changed to 8001 to avoid any conflicts
     volumes:
       - ./processing:/app
     networks:
