Remove thalamus (NGINX) service - missing nginx.conf file

--- a/docker-compose-neuromorphic-fixed.yml
+++ b/docker-compose-neuromorphic-fixed.yml
@@ -2,6 +2,7 @@
 # Removed obsolete 'version' attribute
 # Updated Neo4j image to working version
 # Fixed port conflicts with existing hybrid memory stack
+# Removed thalamus (NGINX) temporarily - missing config file
 
 services:
   # Graph Database - Knowledge Storage (Neo4j)
@@ -58,21 +59,6 @@ services:
       - "6380:6379"   # Fixed: was 6379 (conflict with hybrid memory)
     volumes:
       - hippocampus_data:/data
-    networks:
-      - neuromorphic_net
-
-  # Routing & Load Balancing (NGINX)
-  thalamus:
-    image: nginx:alpine
-    container_name: thalamus
-    ports:
-      - "8080:80"     # Avoiding port 80 conflict
-      - "8443:443"    # Avoiding port 443 conflict
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - cerebellum
-      - hippocampus
     networks:
       - neuromorphic_net
 
