--- a/docker-compose-neuromorphic.yml
+++ b/docker-compose-neuromorphic.yml
@@ -1,8 +1,6 @@
-# Neuromorphic Brain Architecture - Complete Version
+# Neuromorphic Brain Architecture - Fixed Version
 # Removed obsolete 'version' attribute
 # Updated Neo4j image to working version
-# Fixed port conflicts with existing hybrid memory stack
-# Added thalamus back with proper nginx.conf
 
 services:
   # Graph Database - Knowledge Storage (Neo4j)
@@ -15,8 +13,8 @@ services:
       - NEO4J_dbms_memory_heap_initial__size=512M
       - NEO4J_dbms_memory_heap_max__size=1G
     ports:
-      - "7475:7474"   # HTTP (avoiding 7474 conflict)
-      - "7688:7687"   # Bolt (avoiding 7687 conflict)
+      - "7474:7474"   # HTTP
+      - "7687:7687"   # Bolt
     volumes:
       - cerebellum_data:/data
       - cerebellum_logs:/logs
@@ -29,10 +27,10 @@ services:
     container_name: brainstem
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     ports:
-      - "9093:9092"   # Avoiding 9092 conflict
+      - "9092:9092"
     depends_on:
       - zookeeper
     networks:
@@ -46,7 +44,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - "2182:2181"   # Avoiding 2181 conflict
+      - "2181:2181"
     networks:
       - neuromorphic_net
 
@@ -56,27 +54,24 @@ services:
     container_name: hippocampus
     command: redis-server --appendonly yes
     ports:
-      - "6380:6379"   # Fixed: was 6379 (conflict with hybrid memory)
+      - "6379:6379"
     volumes:
       - hippocampus_data:/data
     networks:
       - neuromorphic_net
 
-  # Routing & Load Balancing (NGINX) - Thalamus Brain Region
+  # Routing & Load Balancing (NGINX)
   thalamus:
     image: nginx:alpine
     container_name: thalamus
     ports:
-      - "8082:80"     # HTTP routing
-      - "8443:443"    # HTTPS routing
-      - "6381:6381"   # Redis proxy
-      - "9094:9094"   # Kafka proxy
+      - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - cerebellum
       - hippocampus
-      - imagination-processor
     networks:
       - neuromorphic_net
 
@@ -94,7 +89,7 @@ services:
         import uvicorn; uvicorn.run(app, host=\"0.0.0.0\", port=8000)'
       "
     ports:
-      - "8001:8000"   # Changed to 8001 to avoid any conflicts
+      - "8000:8000"
     volumes:
       - ./processing:/app
     networks:
