Fix PostgreSQL database name for MCP server compatibility
- Change POSTGRES_DB from "neocortex" to "neuromorphic" 
- Ensures MCP server can connect to correct database
- Maintains neocortex container name for brain region identity

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     volumes:
       - neocortex_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=neocortex
+      - POSTGRES_DB=neuromorphic
       - POSTGRES_USER=neuromorphic
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-neuromorphic2025}
     networks:
