🔧 Fix .gitignore: preserve package-lock.json for reproducible builds

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Package manager lock files
-package-lock.json
-yarn.lock
+# Package manager files that should NOT be ignored
+# package-lock.json - KEEP (ensures reproducible builds)
+# yarn.lock - KEEP (if using Yarn)
 
 # Environment variables
 .env
